package com.mycompany.mathgame.core;
public record Question(String prompt, int answer) {}
